# GST-Saas-

./: .gitignore  1_Market_Research.md  2_Product_Strategy.md  3_Technical_Architecture.md  4_Pricing_Analysis.md  5_AI_Vision_Options_Research.md  6_MVP_Features.md  7_Invoice_Extraction_Update.md  8_Final_Pipeline_Optimizations.md  CLAUDE.md  CODE_REVIEW_FIXES_DOCUMENTATION.md  CODE_REVIEW_REPORT.md  CREDITS_DOCUMENTATION.md  Code-Review-18-07.md  ENTERPRISE_RBAC_DOCUMENTATION.md  PHASE42_SUMMARY.md  README.md  SESSION_LOG.md  Vision.md  backend_all.txt  check_null_clients.py  check_org.py  docker-compose.yml  extract_walkthroughs.py  final_schema_update.sql  frontend_all.txt  generate_sample_data.py  migration_phase10.sql  migration_phase12.sql  migration_phase13.sql  migration_phase14_indexes.sql  migration_phase15_category.sql  migration_phase16_payments.sql  migration_phase17_dashboard.sql  migration_phase18_save.sql  migration_phase21_gst_fields.sql  migration_phase22_increment_credits.sql  migration_phase24_kyc.sql  migration_phase27_bridge.sql  migration_phase28_accountant.sql  (+19 more)
.agents/: AGENTS.md  skills.json
Fixes/: FIXES_README.md  Fix 1.md  ledgerlens_gap_fixes.patch
Voucher/: Amount in Same Column.tsf  Amount in Same Column.xlsx  Attendance Type import.xlsx  Attendance Voucher.xlsx  Bank Ledger with bank details.xlsx  CostCentre.xlsx  Employee Group.xlsx  Employee with Salary Details.xlsx  Ledger Entries in Columns.tsf  Ledger Entries in Columns.xlsx  Stock Items.tsf  (+29 more)
bridge/src-tauri/: Cargo.toml  tauri.conf.json
bridge/src-tauri/src/: lib.rs  main.rs
(+453 files in other folders)
