[package]
name = "khatalens-tally-bridge"
version = "0.1.0"
description = "KhataLens local Tally XML pusher"
authors = ["KhataLens"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time", "sync", "macros", "rt-multi-thread"] }
parking_lot = "0.12"

[lib]
name = "khatalens_tally_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
